--- a/get-started/templates/giveasily/assets/css/flexbox.css
+++ b/get-started/templates/giveasily/assets/css/flexbox.css
@@ -1,3 +1,24 @@
+#copyright {
+  background: #1E0E3C;
+  border-top: 2px dotted #3b3d42;
+  padding: 10px;
+}
+
+#copyright p {
+  line-height: 42px;
+  color: #fff;
+  text-align: left;
+  margin: 0;
+}
+
+#copyright p a {
+  color: #fff;
+}
+
+#copyright p a:hover {
+  color: #137ED9;
+}
+
 body {
   color: #404040;
 }
